# iot_esp_101

./: .gitignore  README.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
esp32/: platformio.ini
esp32/src/: config.h  main.cpp
frontend/: index.html
infrastructure/: docker-compose.local.yml  docker-compose.yml  init-db.sql  setup-server.sh
infrastructure/mosquitto/: mosquitto.conf
infrastructure/nginx/: nginx.conf
